[package]
name = "hastebin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
chrono = { version = "0.4.44", features = ["serde"] }
nanoid = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5.3"
tower_governor = "0.8.0"
